Deployed  with MkDocs version: 1.0.4

--- a/sdcard/index.html
+++ b/sdcard/index.html
@@ -147,7 +147,7 @@
 </code></pre>
 
 <p>This picture they showed is not accurate .</p>
-<p><img alt="" src="../picture/Sdcard.jpg" /></p>
+<p><img alt="" src="../img/Sdcard.jpg" /></p>
 <p>He tried to write T31 instead T40.</p>
               
             </div>
